--- a/Notes/singularity_demo/docker_sister/Dockerfile
+++ b/Notes/singularity_demo/docker_sister/Dockerfile
@@ -1,3 +1,5 @@
 FROM continuumio/miniconda3:22.11.1
 
 RUN conda install -c conda-forge r-base=4.2.2
+RUN apt-get update -q && apt-get install -y build-essential
+
